<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:background="#00ECB309"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    android:visibility="visible"
    app:layout_constraintBaseline_creator="@integer/mr_controller_volume_group_list_animation_duration_ms"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Place"
        android:layout_width="252dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/cabin_semibold"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="27sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/degree"
        android:layout_width="140dp"
        android:layout_height="87dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-light"
        android:text="60"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/condition"
        android:layout_width="160dp"
        android:layout_height="19dp"
        android:layout_marginTop="75dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/sunny"
        android:layout_width="172dp"
        android:layout_height="127dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="40dp"
        android:background="#00E42E2E"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:lottie_autoPlay="true"
        app:lottie_fileName="sun.json"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/cloudy"
        android:layout_width="172dp"
        android:layout_height="127dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="80dp"
        android:background="#00E42E2E"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:lottie_autoPlay="true"
        app:lottie_fileName="cloiudy.json"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/rainy"
        android:layout_width="172dp"
        android:layout_height="127dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="80dp"
        android:background="#00E42E2E"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:lottie_autoPlay="true"
        app:lottie_fileName="rain.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/dusk"
        android:layout_width="395dp"
        android:layout_height="164dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shadow"
        android:backgroundTint="#F0EFEF"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="2dp"
        android:layout_height="143dp"
        android:background="@drawable/roundedcorner"
        app:layout_constraintBottom_toBottomOf="@+id/dusk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dusk" />

    <View
        android:id="@+id/view3"
        android:layout_width="153dp"
        android:layout_height="2dp"
        android:layout_marginEnd="202dp"
        android:background="@drawable/roundedcorner"
        app:layout_constraintBottom_toBottomOf="@+id/dusk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dusk" />

    <View
        android:id="@+id/view2"
        android:layout_width="153dp"
        android:layout_height="2dp"
        android:layout_marginStart="202dp"
        android:background="@drawable/roundedcorner"
        app:layout_constraintBottom_toBottomOf="@+id/dusk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dusk" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/Humidity"
        android:layout_width="75dp"
        android:layout_height="79dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="80dp"
        android:background="#00E42E2E"
        android:elevation="15dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452"
        app:lottie_autoPlay="true"
        app:lottie_fileName="humid.json"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/pressure"
        android:layout_width="75dp"
        android:layout_height="79dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="80dp"
        android:background="#00E42E2E"
        android:elevation="15dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439"
        app:lottie_autoPlay="true"
        app:lottie_fileName="pressure2.json"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/Realfeel"
        android:layout_width="75dp"
        android:layout_height="79dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="80dp"
        android:background="#00E42E2E"
        android:elevation="15dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623"
        app:lottie_autoPlay="true"
        app:lottie_fileName="energy.json"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/Wind"
        android:layout_width="75dp"
        android:layout_height="79dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="120dp"
        android:background="#00E42E2E"
        android:elevation="15dp"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623"
        app:lottie_autoPlay="true"
        app:lottie_fileName="windy2.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/hum"
        android:layout_width="74dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:elevation="11dp"
        android:text="@string/humi"
        android:textColor="#72000000"
        app:layout_constraintStart_toEndOf="@+id/Humidity"
        app:layout_constraintTop_toTopOf="@+id/dusk" />

    <TextView
        android:id="@+id/pres"
        android:layout_width="80dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:elevation="11dp"
        android:text="@string/pres"
        android:textColor="#72000000"
        app:layout_constraintStart_toEndOf="@+id/pressure"
        app:layout_constraintTop_toTopOf="@+id/dusk" />

    <TextView
        android:id="@+id/reel"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:elevation="11dp"
        android:text="@string/reel"
        android:textColor="#72000000"
        app:layout_constraintStart_toEndOf="@+id/Humidity"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/wind"
        android:layout_width="83dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:elevation="11dp"
        android:text="@string/wind"
        android:textColor="#72000000"
        app:layout_constraintStart_toEndOf="@+id/Wind"
        app:layout_constraintTop_toBottomOf="@+id/view2" />


    <TextView
        android:id="@+id/hum1"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:elevation="11dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/Humidity"
        app:layout_constraintTop_toTopOf="@+id/dusk" />

    <TextView
        android:id="@+id/pres1"
        android:layout_width="88dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:elevation="11dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/pressure"
        app:layout_constraintTop_toTopOf="@+id/dusk" />

    <TextView
        android:id="@+id/reel1"
        android:layout_width="77dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:elevation="11dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/Humidity"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/wind1"
        android:layout_width="87dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:elevation="11dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="18dp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/Wind"
        app:layout_constraintTop_toBottomOf="@+id/view2" />


    <TextView
        android:id="@+id/motive"
        android:layout_width="232dp"
        android:layout_height="24dp"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="40dp"
        android:text="@string/appprovided"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/powered"
        android:layout_width="192dp"
        android:layout_height="112dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:background="#00E42E2E"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965"
        app:lottie_autoPlay="true"
        app:lottie_fileName="an1.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="181dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cloudy" />


</androidx.constraintlayout.widget.ConstraintLayout>